@@ -1,10 +1,12 @@
 package by.ceramogrand.processes.web.api;
 
 import by.ceramogrand.processes.service.enums.UserRoleEnumDTO;
-import java.util.List;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.Arrays;
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/userRoles")
@@ -12,6 +14,6 @@ public class UserRoleController {
 
     @GetMapping
     public List<UserRoleEnumDTO> getUserRoles() {
-        return List.of(UserRoleEnumDTO.values());
+        return Arrays.asList(UserRoleEnumDTO.values());
     }
 }
